kustomize/hello-openshift-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-openshift
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-openshift
